# anton

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  anton.html  genindex.html  getting_started.html  index.html  installation.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  random_testing.py  requirements.txt  search.html  searchindex.js
.github/workflows/: ci-testing.yml  create-release.yml  deploy-docs.yml  publish-docs-and-package.yml
_sources/: anton.rst.txt
docs/: build_docs.sh  requirements.txt
docs/source/: anton.rst  conf.py  getting_started.md  index.rst  installation.md  yaml.rst
src/anton/: __init__.py  anton_plugin.py  constants.py  generate_objects.py  getter.py  json.py  loader.py  toml.py  type_match.py  yaml.py
src/anton/core/: getter.py  loader.py
src/anton/core/type_handlers/: constants.py  generate_objects.py  type_match.py
src/pyyamlconf/: __init__.py  generate_objects.py  type_match.py  yaml.py
tests/: __init__.py  conftest.py  test_simple.py  test_simple_any.py  test_simple_dict.py  test_simple_list.py  test_simple_optional.py  test_simple_tuple.py  test_simple_user_defined_class.py  test_simple_user_defined_dataclass.py  test_type_match.py
tests/core/: test_getter.py  test_loader.py
tests/core/type_handlers/: test_type_match.py
tests/example_yaml_files/: simple.yaml  simple_any.yaml  simple_dict.yaml  simple_list.yaml  simple_optional.yaml  simple_tuple.yaml  simple_user_defined_class.yaml
tests/integration/: test_simple.py  test_simple_any.py  test_simple_dataclass.py  test_simple_dict.py  test_simple_list.py  test_simple_optional.py  test_simple_python_class.py  test_simple_set.py  test_simple_tuple.py  test_simple_user_defined_dataclass.py
